@startuml

hide circle
hide empty members


abstract class SourceAdapter
abstract class CacheAdapter

class HtmlFetcher
class SourceAdapterFetcherShim
class HttpResponseFileCacheAdapter
class GeminiJsonFileCacheAdapter


SourceAdapter <|-- HtmlFetcher

HtmlFetcher <|-- SourceAdapterFetcherShim

CacheAdapter <|-- HttpResponseFileCacheAdapter
CacheAdapter <|-- GeminiJsonFileCacheAdapter

@enduml
